Fix announcement bar dark mode

--- a/spiceaidocs/src/css/custom.css
+++ b/spiceaidocs/src/css/custom.css
@@ -15,6 +15,9 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --announcement-bar-bg: #fafbfc;
+  --announcement-bar-text: #091E42;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,6 +30,9 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --announcement-bar-bg: #000;
+  --announcement-bar-text: #fff;
 }
 
 [data-theme='light'] .DocSearch {
